// Copyright 2017 The ObjectHash-Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is used for tests that ensure that unsupported proto features and
// potentially harmful schema settings are detected immidately.

syntax = "proto2";

package schema.proto2;

// Should fail when encountering custom default values.
message BadWithDefaults {
  optional string text = 1 [default = "N/A"];
}

// The Go protobuf implementation does not have implicit enum defaults, so it's
// not possible to detect them and return an error.
//
// Implicit custom default values in enums should also be considered illegal.
// message BadWithImplicitDefaults {
//   enum BadEnum {
//     TRUE = 1;
//     FALSE = 2;
//   }
//
//   optional BadEnum baddie = 1;
// }

// Should fail when encountering required fields.
message BadWithRequirements {
  required string text = 1;
}

// Adding extensions to a proto is also illegal.
message BadWithExtensions {
  optional string text = 3;
  extensions 100 to 199;
}
