// Copyright 2017 The ObjectHash-Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is used for tests that ensure that correctly updating protos preserves
// their objecthash.

syntax = "proto3";

package schema.proto3;

message PersonV1 {
  int32 id = 1;
  string name = 2;
}

message PersonV2 {
  int32 id = 1;
  string name = 2;
  uint32 age = 3;
  string profession = 4;
  repeated PersonV2 children = 5;
}

message PersonV3 {
  int32 id = 1;
  uint32 age = 3;
  string profession = 4;
  repeated PersonV3 children = 5;

  oneof name {
    string full_name = 2;
    NameV3 structured_name = 6;
  }

  message NameV3 {
    string first = 1;
    string last = 2;
  }
}

message PersonV4 {
  int32 id = 1;
  string deprecated_full_name = 2;
  uint32 age = 3;
  string profession = 4;
  repeated PersonV3 children = 5;
  NameV4 structured_name = 6;

  message NameV4 {
    string first = 1;
    string last = 2;
  }
}
